y.output
State 30 conflicts: 3 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 35 conflicts: 1 reduce/reduce


Grammar

    0 $accept: ETU_MNA_PROGRAM $end

    1 ETU_MNA_PROGRAM: PROGRAM id SEMICOLON Dec_Sec Main_Sec

    2 Dec_Sec: DEGISKENLER Var_List SEMICOLON
    3        | DEGISKENLER SEMICOLON

    4 Var_List: Var_Def
    5         | Var_Def COLON Var_List

    6 Var_Def: Var_Name
    7        | Var_Name ESITTIR int_literal

    8 Var_Name: id

    9 Main_Sec: KOMUTLAR Stmt

   10 Stmt: Stmt Stmt
   11     | Input_Stmt
   12     | Output_Stmt
   13     | Assignment_Stmt

   14 Input_Stmt: OKU message Var_Name SEMICOLON

   15 Output_Stmt: YAZ message SEMICOLON
   16            | YAZ message Expr SEMICOLON

   17 Assignment_Stmt: Var_Name ASSIGN Expr SEMICOLON

   18 Expr: InfixExpr
   19     | PostfixExpr

   20 InfixExpr: Term
   21          | InfixExpr ARTI Term
   22          | InfixExpr EKSI Term

   23 Term: Factor
   24     | Term CARPI Factor
   25     | Term BOLU Factor

   26 Factor: int_literal
   27       | Var_Name
   28       | PARANTEZAC InfixExpr PARANTEZKAPA

   29 PostfixExpr: PostfixExpr PostfixExpr TOPLA
   30            | PostfixExpr PostfixExpr CIKAR
   31            | PostfixExpr PostfixExpr CARP
   32            | PostfixExpr PostfixExpr BOL
   33            | int_literal
   34            | Var_Name


Terminals, with rules where they appear

$end (0) 0
error (256)
id (258) 1 8
message (259) 14 15 16
int_literal (260) 7 26 33
PROGRAM (261) 1
DEGISKENLER (262) 2 3
SEMICOLON (263) 1 2 3 14 15 16 17
COLON (264) 5
KOMUTLAR (265) 9
ESITTIR (266) 7
OKU (267) 14
YAZ (268) 15 16
ARTI (269) 21
EKSI (270) 22
CARP (271) 31
BOL (272) 32
TOPLA (273) 29
CIKAR (274) 30
ASSIGN (275) 17
CARPI (276) 24
BOLU (277) 25
PARANTEZAC (278) 28
PARANTEZKAPA (279) 28


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
ETU_MNA_PROGRAM (26)
    on left: 1, on right: 0
Dec_Sec (27)
    on left: 2 3, on right: 1
Var_List (28)
    on left: 4 5, on right: 2 5
Var_Def (29)
    on left: 6 7, on right: 4 5
Var_Name (30)
    on left: 8, on right: 6 7 14 17 27 34
Main_Sec (31)
    on left: 9, on right: 1
Stmt (32)
    on left: 10 11 12 13, on right: 9 10
Input_Stmt (33)
    on left: 14, on right: 11
Output_Stmt (34)
    on left: 15 16, on right: 12
Assignment_Stmt (35)
    on left: 17, on right: 13
Expr (36)
    on left: 18 19, on right: 16 17
InfixExpr (37)
    on left: 20 21 22, on right: 18 21 22 28
Term (38)
    on left: 23 24 25, on right: 20 21 22 24 25
Factor (39)
    on left: 26 27 28, on right: 23 24 25
PostfixExpr (40)
    on left: 29 30 31 32 33 34, on right: 19 29 30 31 32


State 0

    0 $accept: . ETU_MNA_PROGRAM $end

    PROGRAM  shift, and go to state 1

    ETU_MNA_PROGRAM  go to state 2


State 1

    1 ETU_MNA_PROGRAM: PROGRAM . id SEMICOLON Dec_Sec Main_Sec

    id  shift, and go to state 3


State 2

    0 $accept: ETU_MNA_PROGRAM . $end

    $end  shift, and go to state 4


State 3

    1 ETU_MNA_PROGRAM: PROGRAM id . SEMICOLON Dec_Sec Main_Sec

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: ETU_MNA_PROGRAM $end .

    $default  accept


State 5

    1 ETU_MNA_PROGRAM: PROGRAM id SEMICOLON . Dec_Sec Main_Sec

    DEGISKENLER  shift, and go to state 6

    Dec_Sec  go to state 7


State 6

    2 Dec_Sec: DEGISKENLER . Var_List SEMICOLON
    3        | DEGISKENLER . SEMICOLON

    id         shift, and go to state 8
    SEMICOLON  shift, and go to state 9

    Var_List  go to state 10
    Var_Def   go to state 11
    Var_Name  go to state 12


State 7

    1 ETU_MNA_PROGRAM: PROGRAM id SEMICOLON Dec_Sec . Main_Sec

    KOMUTLAR  shift, and go to state 13

    Main_Sec  go to state 14


State 8

    8 Var_Name: id .

    $default  reduce using rule 8 (Var_Name)


State 9

    3 Dec_Sec: DEGISKENLER SEMICOLON .

    $default  reduce using rule 3 (Dec_Sec)


State 10

    2 Dec_Sec: DEGISKENLER Var_List . SEMICOLON

    SEMICOLON  shift, and go to state 15


State 11

    4 Var_List: Var_Def .
    5         | Var_Def . COLON Var_List

    COLON  shift, and go to state 16

    $default  reduce using rule 4 (Var_List)


State 12

    6 Var_Def: Var_Name .
    7        | Var_Name . ESITTIR int_literal

    ESITTIR  shift, and go to state 17

    $default  reduce using rule 6 (Var_Def)


State 13

    9 Main_Sec: KOMUTLAR . Stmt

    id   shift, and go to state 8
    OKU  shift, and go to state 18
    YAZ  shift, and go to state 19

    Var_Name         go to state 20
    Stmt             go to state 21
    Input_Stmt       go to state 22
    Output_Stmt      go to state 23
    Assignment_Stmt  go to state 24


State 14

    1 ETU_MNA_PROGRAM: PROGRAM id SEMICOLON Dec_Sec Main_Sec .

    $default  reduce using rule 1 (ETU_MNA_PROGRAM)


State 15

    2 Dec_Sec: DEGISKENLER Var_List SEMICOLON .

    $default  reduce using rule 2 (Dec_Sec)


State 16

    5 Var_List: Var_Def COLON . Var_List

    id  shift, and go to state 8

    Var_List  go to state 25
    Var_Def   go to state 11
    Var_Name  go to state 12


State 17

    7 Var_Def: Var_Name ESITTIR . int_literal

    int_literal  shift, and go to state 26


State 18

   14 Input_Stmt: OKU . message Var_Name SEMICOLON

    message  shift, and go to state 27


State 19

   15 Output_Stmt: YAZ . message SEMICOLON
   16            | YAZ . message Expr SEMICOLON

    message  shift, and go to state 28


State 20

   17 Assignment_Stmt: Var_Name . ASSIGN Expr SEMICOLON

    ASSIGN  shift, and go to state 29


State 21

    9 Main_Sec: KOMUTLAR Stmt .
   10 Stmt: Stmt . Stmt

    id   shift, and go to state 8
    OKU  shift, and go to state 18
    YAZ  shift, and go to state 19

    $default  reduce using rule 9 (Main_Sec)

    Var_Name         go to state 20
    Stmt             go to state 30
    Input_Stmt       go to state 22
    Output_Stmt      go to state 23
    Assignment_Stmt  go to state 24


State 22

   11 Stmt: Input_Stmt .

    $default  reduce using rule 11 (Stmt)


State 23

   12 Stmt: Output_Stmt .

    $default  reduce using rule 12 (Stmt)


State 24

   13 Stmt: Assignment_Stmt .

    $default  reduce using rule 13 (Stmt)


State 25

    5 Var_List: Var_Def COLON Var_List .

    $default  reduce using rule 5 (Var_List)


State 26

    7 Var_Def: Var_Name ESITTIR int_literal .

    $default  reduce using rule 7 (Var_Def)


State 27

   14 Input_Stmt: OKU message . Var_Name SEMICOLON

    id  shift, and go to state 8

    Var_Name  go to state 31


State 28

   15 Output_Stmt: YAZ message . SEMICOLON
   16            | YAZ message . Expr SEMICOLON

    id           shift, and go to state 8
    int_literal  shift, and go to state 32
    SEMICOLON    shift, and go to state 33
    PARANTEZAC   shift, and go to state 34

    Var_Name     go to state 35
    Expr         go to state 36
    InfixExpr    go to state 37
    Term         go to state 38
    Factor       go to state 39
    PostfixExpr  go to state 40


State 29

   17 Assignment_Stmt: Var_Name ASSIGN . Expr SEMICOLON

    id           shift, and go to state 8
    int_literal  shift, and go to state 32
    PARANTEZAC   shift, and go to state 34

    Var_Name     go to state 35
    Expr         go to state 41
    InfixExpr    go to state 37
    Term         go to state 38
    Factor       go to state 39
    PostfixExpr  go to state 40


State 30

   10 Stmt: Stmt . Stmt
   10     | Stmt Stmt .

    id   shift, and go to state 8
    OKU  shift, and go to state 18
    YAZ  shift, and go to state 19

    id        [reduce using rule 10 (Stmt)]
    OKU       [reduce using rule 10 (Stmt)]
    YAZ       [reduce using rule 10 (Stmt)]
    $default  reduce using rule 10 (Stmt)

    Var_Name         go to state 20
    Stmt             go to state 30
    Input_Stmt       go to state 22
    Output_Stmt      go to state 23
    Assignment_Stmt  go to state 24


State 31

   14 Input_Stmt: OKU message Var_Name . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 32

   26 Factor: int_literal .
   33 PostfixExpr: int_literal .

    id           reduce using rule 33 (PostfixExpr)
    int_literal  reduce using rule 33 (PostfixExpr)
    SEMICOLON    reduce using rule 26 (Factor)
    SEMICOLON    [reduce using rule 33 (PostfixExpr)]
    $default     reduce using rule 26 (Factor)


State 33

   15 Output_Stmt: YAZ message SEMICOLON .

    $default  reduce using rule 15 (Output_Stmt)


State 34

   28 Factor: PARANTEZAC . InfixExpr PARANTEZKAPA

    id           shift, and go to state 8
    int_literal  shift, and go to state 43
    PARANTEZAC   shift, and go to state 34

    Var_Name   go to state 44
    InfixExpr  go to state 45
    Term       go to state 38
    Factor     go to state 39


State 35

   27 Factor: Var_Name .
   34 PostfixExpr: Var_Name .

    id           reduce using rule 34 (PostfixExpr)
    int_literal  reduce using rule 34 (PostfixExpr)
    SEMICOLON    reduce using rule 27 (Factor)
    SEMICOLON    [reduce using rule 34 (PostfixExpr)]
    $default     reduce using rule 27 (Factor)


State 36

   16 Output_Stmt: YAZ message Expr . SEMICOLON

    SEMICOLON  shift, and go to state 46


State 37

   18 Expr: InfixExpr .
   21 InfixExpr: InfixExpr . ARTI Term
   22          | InfixExpr . EKSI Term

    ARTI  shift, and go to state 47
    EKSI  shift, and go to state 48

    $default  reduce using rule 18 (Expr)


State 38

   20 InfixExpr: Term .
   24 Term: Term . CARPI Factor
   25     | Term . BOLU Factor

    CARPI  shift, and go to state 49
    BOLU   shift, and go to state 50

    $default  reduce using rule 20 (InfixExpr)


State 39

   23 Term: Factor .

    $default  reduce using rule 23 (Term)


State 40

   19 Expr: PostfixExpr .
   29 PostfixExpr: PostfixExpr . PostfixExpr TOPLA
   30            | PostfixExpr . PostfixExpr CIKAR
   31            | PostfixExpr . PostfixExpr CARP
   32            | PostfixExpr . PostfixExpr BOL

    id           shift, and go to state 8
    int_literal  shift, and go to state 51

    $default  reduce using rule 19 (Expr)

    Var_Name     go to state 52
    PostfixExpr  go to state 53


State 41

   17 Assignment_Stmt: Var_Name ASSIGN Expr . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 42

   14 Input_Stmt: OKU message Var_Name SEMICOLON .

    $default  reduce using rule 14 (Input_Stmt)


State 43

   26 Factor: int_literal .

    $default  reduce using rule 26 (Factor)


State 44

   27 Factor: Var_Name .

    $default  reduce using rule 27 (Factor)


State 45

   21 InfixExpr: InfixExpr . ARTI Term
   22          | InfixExpr . EKSI Term
   28 Factor: PARANTEZAC InfixExpr . PARANTEZKAPA

    ARTI          shift, and go to state 47
    EKSI          shift, and go to state 48
    PARANTEZKAPA  shift, and go to state 55


State 46

   16 Output_Stmt: YAZ message Expr SEMICOLON .

    $default  reduce using rule 16 (Output_Stmt)


State 47

   21 InfixExpr: InfixExpr ARTI . Term

    id           shift, and go to state 8
    int_literal  shift, and go to state 43
    PARANTEZAC   shift, and go to state 34

    Var_Name  go to state 44
    Term      go to state 56
    Factor    go to state 39


State 48

   22 InfixExpr: InfixExpr EKSI . Term

    id           shift, and go to state 8
    int_literal  shift, and go to state 43
    PARANTEZAC   shift, and go to state 34

    Var_Name  go to state 44
    Term      go to state 57
    Factor    go to state 39


State 49

   24 Term: Term CARPI . Factor

    id           shift, and go to state 8
    int_literal  shift, and go to state 43
    PARANTEZAC   shift, and go to state 34

    Var_Name  go to state 44
    Factor    go to state 58


State 50

   25 Term: Term BOLU . Factor

    id           shift, and go to state 8
    int_literal  shift, and go to state 43
    PARANTEZAC   shift, and go to state 34

    Var_Name  go to state 44
    Factor    go to state 59


State 51

   33 PostfixExpr: int_literal .

    $default  reduce using rule 33 (PostfixExpr)


State 52

   34 PostfixExpr: Var_Name .

    $default  reduce using rule 34 (PostfixExpr)


State 53

   29 PostfixExpr: PostfixExpr . PostfixExpr TOPLA
   29            | PostfixExpr PostfixExpr . TOPLA
   30            | PostfixExpr . PostfixExpr CIKAR
   30            | PostfixExpr PostfixExpr . CIKAR
   31            | PostfixExpr . PostfixExpr CARP
   31            | PostfixExpr PostfixExpr . CARP
   32            | PostfixExpr . PostfixExpr BOL
   32            | PostfixExpr PostfixExpr . BOL

    id           shift, and go to state 8
    int_literal  shift, and go to state 51
    CARP         shift, and go to state 60
    BOL          shift, and go to state 61
    TOPLA        shift, and go to state 62
    CIKAR        shift, and go to state 63

    Var_Name     go to state 52
    PostfixExpr  go to state 53


State 54

   17 Assignment_Stmt: Var_Name ASSIGN Expr SEMICOLON .

    $default  reduce using rule 17 (Assignment_Stmt)


State 55

   28 Factor: PARANTEZAC InfixExpr PARANTEZKAPA .

    $default  reduce using rule 28 (Factor)


State 56

   21 InfixExpr: InfixExpr ARTI Term .
   24 Term: Term . CARPI Factor
   25     | Term . BOLU Factor

    CARPI  shift, and go to state 49
    BOLU   shift, and go to state 50

    $default  reduce using rule 21 (InfixExpr)


State 57

   22 InfixExpr: InfixExpr EKSI Term .
   24 Term: Term . CARPI Factor
   25     | Term . BOLU Factor

    CARPI  shift, and go to state 49
    BOLU   shift, and go to state 50

    $default  reduce using rule 22 (InfixExpr)


State 58

   24 Term: Term CARPI Factor .

    $default  reduce using rule 24 (Term)


State 59

   25 Term: Term BOLU Factor .

    $default  reduce using rule 25 (Term)


State 60

   31 PostfixExpr: PostfixExpr PostfixExpr CARP .

    $default  reduce using rule 31 (PostfixExpr)


State 61

   32 PostfixExpr: PostfixExpr PostfixExpr BOL .

    $default  reduce using rule 32 (PostfixExpr)


State 62

   29 PostfixExpr: PostfixExpr PostfixExpr TOPLA .

    $default  reduce using rule 29 (PostfixExpr)


State 63

   30 PostfixExpr: PostfixExpr PostfixExpr CIKAR .

    $default  reduce using rule 30 (PostfixExpr)
